--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 section {
-	background: url(images/magic_kingdom.jpg);
+	background: url(../images/magic_kingdom.jpg);
 	background-size: cover;
 }
 
