--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,3 +1,8 @@
+* {
+	padding: 0;
+	margin: 0;
+}
+
 body{
 	background-color: #7FC7FF;
 }
@@ -5,11 +10,22 @@ body{
 section {
 	background: url(../images/magic_kingdom.jpg);
 	background-size: cover;
-	height: 1000px;
+	height: 800px;
 }
 
 h1, h3{
 	color: white;	
+}
+
+nav a {
+	color: #cccccc;
+	font-style: italic;
+	margin-right: 20px;
+}
+
+header, section, main, footer {
+	margin: 20px 0;
+	padding-left: 20px;
 }
 
 #slogan{
