--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -14,16 +14,17 @@ section {
 }
 
 h1, h3{
-	color: white;	
+	color: white;
+	margin-left: 20px;	
 }
 
 nav a {
 	color: #cccccc;
 	font-style: italic;
-	margin-right: 20px;
+	margin-right: 40px;
 }
 
-header, section, main, footer {
+header, main, footer {
 	margin: 20px 0;
 	padding-left: 20px;
 }
