--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -15,7 +15,7 @@ section {
 
 h1, h3{
 	color: white;
-	margin-left: 20px;	
+	margin: 20px;
 }
 
 nav a {
@@ -40,4 +40,8 @@ ul, ol{
 main{
 	line-height: 1.3;
 	margin: 20px;
+}
+
+footer{
+	text-align: center;
 }
