No underline links

--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -29,6 +29,10 @@ main a {
 	margin-top: 20px;
 }
 
+a{
+	text-decoration: none;
+}
+
 header, main, footer {
 	margin: 20px 0;
 	padding-left: 20px;
