--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -25,7 +25,7 @@ nav a {
 }
 
 main a {
-	color: white;
+	color: #EDFEFF;
 	font-style: italic; 
 	margin-right: 25px;
 	margin-top: 20px;
@@ -45,7 +45,7 @@ header, main, footer {
 }
 
 ul, ol{
-	padding-left: 60px;
+	padding-left: 45px;
 }
 
 main{
