--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -47,14 +47,14 @@ footer{
 }
 
 .columns{
+	background-color: violet;
 	border: 1px black solid;
 	padding: 20px;
-	display: block;
 	float: left;
-	width: 30%;
+	width: 30px;
 }
 
-.clearfix:after{
+/*.clearfix:after{
 	visibility: hidden;
 	display: block;
 	font-size: 0;
@@ -62,7 +62,7 @@ footer{
 	clear: both;
 	height: 0;
 }
-
+*/
 nav a{
 	color: #7FC7FF;
 	font-style: italic;
