--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -20,10 +20,7 @@ header{
 }
 
 main{
-	font-style: italic;
-	margin-left: 2em; 
-	margin-right: 1.6em;
-	margin-top: 1.25em;
+	margin: 1.25em 1.6em 0 2em;
 	line-height: 1.3;
 }
 
@@ -70,9 +67,16 @@ nav a{
 	padding: .2em;
 }
 
-.tabs > article{
-	max-width: 350px;
+#wrapper2{ /*doesn't seem to affect anything currently*/
+	align-content: center;
+}
+
+.floats > article{
+	max-width: 275px;
+	width: 23%;
 	float: left;
+	padding: 0 1%;
+	margin: .5em 0;
 }
 
 .lowernav{
@@ -97,14 +101,13 @@ h1{
 
 h3{
 	color:#8C8C8C;
-	margin: 1.5em;
+	margin: .5em 0;
 	font-family: 'Martel', serif;
 	font-size: 1.2em;
 }
 
 h4{
-	padding-top: 1.5em;
-	padding-bottom: .75em;
+	margin: .5em 0;
 }
 
 ul, ol{
@@ -117,7 +120,7 @@ hr {
 	border: none;
 	height: .1em;
 	background-color: #8C8C8C;
-	width: 50em;
+	width: 80%;
 	margin: 2em auto;
 }
 
