--- a/unit_8/css/style.css
+++ b/unit_8/css/style.css
@@ -34,6 +34,7 @@ footer{
 	background: url(../images/magic_kingdom3.jpg) no-repeat center center scroll;
 	height: 50em;
 	max-width: 1200px;
+	background-size: cover;
 	margin: 0 auto;
 }
 
@@ -46,16 +47,44 @@ footer{
 	clear: both;
 }
 
-#wrapper{
-	width: 98%;
+#wrapper1 {
+	width: 52%;
 	margin: auto;
 }
 
-.columns{
+#wrapper2 {
+	width: 60%;
+	margin: auto;
+}
+
+#wrapper3 { 
+	width: 85%;
+	margin: auto;
+}
+
+#wrapper_related_sites {
+	width: 22%;
+	margin: auto; 
+}
+
+.columns {
 	width: 28%;
-	margin: 1.5%;
+	margin: 0 1.5%;
 	float: left;
-	padding: 1%;
+	padding: 0 1%;
+}
+
+.columns > ul {
+	list-style: none;
+}
+
+#wrapper_related_sites > ul {
+	list-style: none;
+}
+
+.bold {
+	font-weight: bold;
+	font-size: 1.1em;
 }
 
 nav a{
@@ -65,10 +94,6 @@ nav a{
 	font-size: 1.5em;
 	letter-spacing: .12em;
 	padding: .2em;
-}
-
-#wrapper2{ /*doesn't seem to affect anything currently*/
-	align-content: center;
 }
 
 .floats > article{
@@ -118,7 +143,7 @@ ul, ol{
 
 hr {
 	border: none;
-	height: .1em;
+	height: 2px;
 	background-color: #8C8C8C;
 	width: 80%;
 	margin: 2em auto;
